<resources>
    <string name="app_name">CitizenAlarm</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_no_password_confirmed">Los passwords no coinciden</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Strings related to login -->
    <string name="register_summary">"Debes proporcionar una &quot;alias&quot; a fin de que los demas
        usuarios te identifiquen, recuerda que la apliacación es anonima  asi que nostoros no
        porporcionaremos ninguna dato acerca de tu informacón personal que te identifique,
        por lo cual te recomendamos que tu &quot;alias&quot;  no haga referencia a tu identidad real."
    </string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_nickname">Nickname</string>
    <string name="title_activity_maps">Map</string>

    <!-- Strings related to alert chooser -->
    <string name="error_alert_required">Debes seleccionar una alerta</string>
    <string name="error_descripton_required">Debes agregar una decripción</string>
</resources>
